[package]
name = "numerals"
description = "Library for numeric systems, both ancient and modern"

authors = [ "ogham@bsago.me" ]
documentation = "https://docs.rs/numerals"
homepage = "https://github.com/ogham/rust-numerals"
license = "MIT"
readme = "README.md"
version = "0.1.2"

[lib]
name = "numerals"
