[package]
name = "numerals"
description = "Library for numeric systems, both ancient and modern"

authors = ["Benjamin Sago <ogham@bsago.me>"]
documentation = "https://docs.rs/numerals"
exclude = ["/README.md", "/LICENCE", "/.rustfmt.toml", "/.travis.yml"]
homepage = "https://github.com/ogham/rust-numerals"
license = "MIT"
readme = "README.md"
version = "0.1.4"

[lib]
name = "numerals"
